# futsalfriend

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml  scraper.yaml  tests.yaml
data/: _coordinates.csv
database/: queries.sql  spielerei.sql
notebooks/: Scraping spielerei.ipynb
scraper/: base.py  config.json  logger.py  main.py  requirements.txt  utils.py
scraper/config/: config.json  config_for_testing.json
scraper/db/: sqlitedb.py  tables.py  update.py
scraper/parsers/: lzvcup.py
scraper/scrapers/: lzvcup.py  main.py
scraper/utils/: base.py  logger.py  utils.py
spielerei/: queries.sql
src/: LZVCupScraper.py  azure.py
tests/: test_scraper.py
webapp/: 01_Home.py  Dockerfile  app.py  last_updated.txt  last_updated_date.txt  queries.py  requirements.txt  utils.py
webapp/pages/: 02_🏆_Friendly_Finder.py  03_👫_Team_Finder.py  04_😏_Vanity_Stats.py  05_📣_Coachbot.py
webapp/ui/: coach.py  friendly.py  home.py  stats.py  team.py
