[tool.poetry]
name = "futsalfriend"
version = "0.1.0"
description = "Your digital futsal friend"
authors = ["Sam Borms <borms_sam@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.13"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.291"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
streamlit = "^1.27.1"
python-dotenv = "^1.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
